# memory_triage_app

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/memtriage/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  storage.py
backend/memtriage/api/: routes_events.py  routes_investigations.py  routes_processes.py  routes_results.py  routes_scoring.py
backend/memtriage/pipeline/: __init__.py  attack.py  explain.py  grid_render.py  placeholder_model.py  progress.py  region_dump.py  vadvit_model.py  volmemlyzer_adapter.py
backend/memtriage/scoring/: __init__.py  catalog.py  context.py  correlate.py  engine.py  heuristics.py  profile.py  rules.py  service.py  windows_baselines.py
backend/memtriage/security/: __init__.py  limits.py  sanitize.py
backend/memtriage/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_explain.py  test_forensics.py  test_grid_render.py  test_region_dump.py  test_scoring.py  test_security.py  test_vadvit_model.py
deploy/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: LeftRail.tsx  TopBar.tsx  primitives.tsx
frontend/src/components/process/: GridViewer.tsx  (+1 more)
frontend/src/demo/: fixtures.ts
frontend/src/lib/: format.ts
frontend/src/state/: store.tsx
models/: README.md
(+8 files in other folders)
