[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memtriage"
version = "0.1.0"
description = "Combined memory-forensics + explainable malware-classification pipeline"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime deps are pinned in requirements.txt (single source of truth used by
# the Docker images). This section keeps the package installable for tests.
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "celery",
    "redis",
    "jinja2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memtriage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
